--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.3",
+    "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.1.3",
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
+    "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "tether": "^1.4.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
