--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "angular-responsive-carousel": "^1.5.11",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
+    "ng-simple-carousel": "^1.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tether": "^1.4.7",
