--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "~10.1.3",
     "@angular/core": "~10.1.3",
     "@angular/forms": "~10.1.3",
+    "@angular/localize": "~10.1.3",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.1.3",
     "@angular/platform-browser-dynamic": "~10.1.3",
@@ -24,6 +25,7 @@
     "@fortawesome/angular-fontawesome": "^0.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "angular-responsive-carousel": "^1.5.11",
     "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
