--- a/package.json
+++ b/package.json
@@ -23,13 +23,24 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
+    "@types/chart.js": "^2.9.27",
+    "angular-bootstrap-md": "^10.0.0",
     "angular-responsive-carousel": "^1.5.11",
+    "angular-slick-carousel": "^3.1.7",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "mdbootstrap": "^4.19.1",
     "ng-simple-carousel": "^1.1.0",
+    "ngx-carousel": "^1.3.5",
+    "ngx-light-carousel": "^1.1.10",
+    "ngx-slick": "^0.2.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tether": "^1.4.7",
